<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3e4757"
        android:focusableInTouchMode="true"
        tools:context=".ui.login.LoginActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_horse"
            android:id="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="77dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="77dp"
            android:layout_marginTop="77dp"/>

    <EditText
            android:id="@+id/username"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorBackgroundLight"
            android:textSize="14sp"
            android:padding="20dp"
            android:gravity="center"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/hint_login"
            android:background="@drawable/bg_button_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginTop="57dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/passwd"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorBackgroundLight"
            android:textSize="14sp"
            android:padding="20dp"
            android:gravity="center"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/hint_password"
            android:background="@drawable/bg_button_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>


    <ru.nickmiller.tinkofffintech.ui.component.ProgressButton
            android:id="@+id/sign_in_btn"
            app:bg_tint="@color/colorAccent"
            app:text="@string/btn_title_enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/passwd"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/textView"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textAllCaps="true"
            android:text="@string/btn_title_recover_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            android:layout_marginTop="16dp"/>

</android.support.constraint.ConstraintLayout>